syntax = "proto3";

package piggymetrics.auth;

option java_package = "com.github.galleog.piggymetrics.auth.grpc";
option java_outer_classname = "UserServiceProto";

// User of the system.
message User {
    // Required. User's name
    string user_name = 1;
    // Required. User's password
    string password = 2;
}

// Event sent when a user is created.
message UserCreatedEvent {
    // Required. Name of the created user.
    string user_name = 1;
}

// Service to work with users.
service UserService {
    // Creates a new user.
    rpc CreateUser (User) returns (User);
}